# electricity_consumption_forecast

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 01_eda.ipynb
scripts/: fetch_data.py
src/: config.py
src/data/: build_features.py  fetch_calendar.py  fetch_forecast.py  fetch_rte.py  fetch_weather.py
tests/: conftest.py  test_calendar.py  test_config.py  test_hierarchical_invariant.py  test_schema.py
