[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "demeter"
version = "0.1.0"
description = "Hierarchical 1h-to-7day electricity demand forecast for the French grid"
requires-python = "==3.11.*"
dependencies = [
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "lightgbm==4.5.0",
    "statsmodels==0.14.4",
    "prophet==1.1.6",
    "streamlit==1.39.0",
    "plotly==5.24.1",
    "kaleido==0.2.1",
    "httpx==0.27.2",
    "holidays==0.58",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "mapie==0.8.6",
    "darts==0.31.0",
    "hierarchicalforecast==0.4.2",
    "shap==0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.1",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "pandas-stubs==2.2.3.241009",
    "types-pytz==2024.2.0.20241003",
    "nbformat==5.10.4",
    "nbconvert==7.16.4",
    "ipykernel==6.29.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Plotly's idiomatic style is dict(title=..., showlegend=...); rewriting to
# dict literals reads worse and breaks copy-paste from plotly examples.
"notebooks/*.ipynb" = ["C408"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
